# SlicerCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
configExample/: 0  README.md
src/: CMakeLists.txt  FilterRender.cpp  FilterRender.h  Geometry.cpp  Geometry.h  Point.cpp  Point.h  SlicerCore.cpp  SlicerCore.h  configManager.cpp  configManager.h  filter.cpp  filter.h  library.cpp  library.h  librarySlicerCore.cpp  librarySlicerCore.h  slicerUtils.h
test/: CMakeLists.txt  test.cpp
